--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
-/.idea
-keep
-/.vitepress/dist
-/.vitepress/cache
-/.vscode
-node_modules
+# Dependencies
+/node_modules
+
+# Production
+/build
+
+# Generated files
+.docusaurus
+.cache-loader
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDEs and editors
+.idea
+.vscode
